[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/Button.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/fonts/DigitalDisco_thin_x16.tres" type="DynamicFont" id=2]
[ext_resource path="res://ui/PauseMenu.gd" type="Script" id=3]
[ext_resource path="res://ui/Menu.tscn" type="PackedScene" id=4]

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
menu = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.705882 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.0
margin_top = -50.0
margin_right = 56.0
margin_bottom = 54.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PausedLabel" type="Label" parent="VBoxContainer"]
margin_right = 112.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "PAUSED"
align = 1
valign = 1

[node name="ContinueButton" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_top = 20.0
margin_right = 112.0
margin_bottom = 42.0
text = "continue"

[node name="RestartButton" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_top = 46.0
margin_right = 112.0
margin_bottom = 68.0
text = "restart"

[node name="OptionsButton" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_top = 72.0
margin_right = 112.0
margin_bottom = 94.0
text = "options"

[node name="MenuButton" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_top = 98.0
margin_right = 112.0
margin_bottom = 120.0
text = "menu"
